# riichilab-agent-rulebase

./: .env.example  AGENTS.md  Cargo.toml  LICENSE-MIT  README.md
riichilab-agent-protocol/: Cargo.toml
riichilab-agent-protocol/src/: lib.rs
riichilab-agent-rulebase-cli/: Cargo.toml
riichilab-agent-rulebase-cli/src/: main.rs
src/: main.rs  protocol.rs  rules.rs
