[package]
name = "riichilab-agent-rulebase-cli"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0 OR MIT"

[dependencies]
anyhow = "1.0.100"
argh = "0.1.13"
futures-util = "0.3.31"
http = "1.3.1"
riichilab-agent-protocol = { path = "../riichilab-agent-protocol" }
serde_json = "1.0.140"
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"] }
tokio-tungstenite = { version = "0.27.0", features = ["rustls-tls-webpki-roots"] }
