[package]
name = "riichilab-agent-rulebase-cli"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0 OR MIT"

[dependencies]
anyhow = "1.0.100"
argh = "0.1.13"
chrono = { version = "0.4.42", default-features = false, features = ["clock"] }
dotenvy = "0.15.7"
futures-util = "0.3.31"
http = "1.3.1"
rand = "0.9.2"
riichienv-core = "0.4.7"
riichilab-agent-protocol = { path = "../riichilab-agent-protocol" }
rustls = { version = "0.23.38", features = ["ring"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread", "time"] }
tokio-tungstenite = { version = "0.27.0", features = ["rustls-tls-webpki-roots"] }
